# fw-control-center

fcc/: Makefile  main.c
gfpm-mcs-plugin/: AUTHORS  NEWS  README  autogen.sh  configure.in
gfpm-mcs-plugin/icons/: Makefile.am  Makefile.in
gfpm-mcs-plugin/po/: Makevars
gfpm-mcs-plugin/src/: gfpm-plugin.c
gnetconfig/: AUTHORS  Makefile.am  NEWS  README  TODO  autoclean.sh  autogen.sh  configure.ac
gnetconfig-mcs-plugin/: AUTHORS  NEWS  README  autogen.sh  configure.in
gnetconfig-mcs-plugin/icons/48x48/: Makefile.in
gnetconfig-mcs-plugin/po/: Makevars
gnetconfig-mcs-plugin/src/: Makefile.am  gnetconfig-plugin.c
gnetconfig/data/: gnetconfig-kde.desktop  gnetconfig.desktop
gnetconfig/glade/: gnetconfig.glade
gnetconfig/po/: POTFILES.in
gnetconfig/src/: Makefile.am  gnetconfig-about.c  gnetconfig-about.h  gnetconfig-interface.c  gnetconfig-interface.h  gnetconfig-interface_detect.c  gnetconfig-interface_detect.h  gnetconfig-interface_opts.c  gnetconfig-interface_opts.h  gnetconfig-messages.c  gnetconfig-messages.h  gnetconfig-misc.c  gnetconfig-misc.h  gnetconfig-new_interface.c  gnetconfig-new_interface.h  gnetconfig-new_profile.c  gnetconfig-new_profile.h  gnetconfig.c  gnetconfig.h
netconfigd/: AUTHORS  Makefile.am  configure.ac  netconfigd.conf
netconfigd/src/: Makefile.am  netconfig-command  netconfigd.c  netconfigd.h  netconfigd.xml
updatenotifier/: Makefile.am  TODO  configure.ac  updnotifierd.conf
updatenotifier/src/: Makefile.am  fun-dbus.c  fun-dbus.h  fun-tooltip.c  fun-tooltip.h  fun-ui.c  fun-ui.h  fun.c  netconfig-command  upd.c  updnotifierd.c  updnotifierd.h  updnotifierd.xml  updnotify
xfce4-gfpm-plugin/: Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  xfce4-gfpm-plugin.desktop
xfce4-gfpm-plugin/icons/48x48/: Makefile.am  Makefile.in
xfce4-gfpm-plugin/po/: POTFILES.in
xfce4-gfpm-plugin/src/: Makefile.am  gfpm-plugin.c
xfce4-gnetconfig-plugin/: AUTHORS  Makefile.am  NEWS  README  autoclean.sh  autogen.sh  configure.ac  configure.in  xfce4-gnetconfig-plugin.desktop
xfce4-gnetconfig-plugin/icons/48x48/: Makefile.am
xfce4-gnetconfig-plugin/po/: POTFILES.in
xfce4-gnetconfig-plugin/src/: Makefile.am  gnetconfig-plugin.c
